	NAs) or fails.	(It used to give a corrupt data frame.)

    o	validObject() avoids an error during evaluation in the case
	of various incorrect slot definitions.

    o	n:m  now returns <integer> in a few more boundary cases.

    o	The 'zap.ind' argument to printCoefmat() did not usually work as
	other code attempted to ensure that non-zero values had a
	non-zero representation.




	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.1 patched


NEW FEATURES

    o	install.packages(NULL) now lists packages only once even if they
	occur in more than one repository (as the latest compatible
	version of those available will always be downloaded).

    o	approxfun() and approx() now accept a 'rule' of length two, for
	easy specification of different interpolation rules on left and
	right.
	They also no longer segfault for invalid zero-length specification
	of 'yleft, 'yright', or 'f'.


BUG FIXES

    o	parse_Rd() still did not handle source reference encodings
	properly.

    o	PrintValue no longer attempts to print attributes for CHARSXPs
	as those attributes are used internally for the CHARSXP cache.
	This fixes a segfault when calling Rf_PrintValue on a CHARSXP
	from C code.

    o	PDF graphics output was producing TWO instances of anything
	drawn with the symbol font face. (Report from Baptiste Auguie.)

    o	length(x) <- newval and grep() could cause memory corruption.
	(PR#13837)

    o	If model.matrix() was given too large a model, it could crash
        R. (PR#13838, fix found by Olaf Mersmann.)

    o	seq_along(x) is now equivalent to seq_len(length(x)); previously it
	was not, when x had a "surprising" length() method.

    o	gzcon() (used by load()) would re-open an open connection,
    	leaking a file descriptor each time. (PR#13841)



		CHANGES IN R VERSION 2.9.1


NEW FEATURES
